# acad

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  rust-toolchain.toml
.github/: build.yml
.github/workflows/: docker.yml
docker/: docker-compose.yml
src/: config.rs  fetcher.rs  index.rs  m3u.rs  main.rs  model.rs  nonewrap.rs  retry.rs  soundcloud.rs  sources.rs  util.rs  wait_find.rs  ytdl.rs
src/source/: mod.rs  soundcloud.rs  youtube.rs
