[package]
name = "acad"
version = "0.4.1"
authors = ["Campbell M. Cole <pslightjs@gmail.com>"]
description = "A SoundCloud archival daemon"
homepage = "https://github.com/campbellcole/acad"
license = "MIT"
edition = "2021"
publish = false

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
id3 = "1.8.0"
image = "0.24.7"
mimalloc = "0.1.39"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "0.1.8", package = "serde_json_lenient" }
tracing = "0.1.39"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
