[package]
name = "acad"
version = "0.5.3"
authors = ["Campbell M. Cole <campbell@campbellcole.dev>"]
description = "A SoundCloud archival daemon"
homepage = "https://github.com/campbellcole/acad"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.35"
chrono-tz = { version = "0.10", features = ["serde"] }
iana-time-zone = "0.1"
color-eyre = "0.6.2"
cron = "0.15.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
dotenvy = "0.15.7"
id3 = "1.8.0"
image = "0.25.0"
mimalloc = "0.1.39"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "0.2.0", package = "serde_json_lenient" }
serde_with = "3.7.0"
tracing = "0.1.39"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
